--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ h1 {
     font-size: 6rem;
     text-align: center;
     color: var(--primary-color);
-    text-shadow: 0 0 20px var(--secondary-color), 0 0 40px var(--secondary-color);
+  text-shadow: 0 -1px 4px #FFF, 0 -2px 10px #ff0, 0 -10px 20px #ff8000, 0 -18px 40px #F00;
     animation: glow 2s ease-in-out infinite;
     margin-bottom: 40px;
 }
